# CompassNavigationOverhaulEnderal

./: CMakeLists.txt
include/: Compass.h  HUDMarkerManager.h  Hooks.h  QuestItemList.h
include/NND/: API.h  NPCNameProvider.h
include/RE/H/: HUDMarkerManager.h
source/: HUDMarkerManager.cpp  Hooks.cpp  MessageListeners.cpp
source/NND/: NPCNameProvider.cpp
swf/: Compass.as  Compass.fla  CompassMarkerInfo.as  FocusedMarker.as  QuestItem.as  QuestItemList.as  QuestItemList.fla
swf/Nordic UI/: Compass.fla
swf/Vanilla-SkyHUD/: Compass.fla
swf/_assets/: CompassArt.fla  QuestItemListArt.fla
